# pyecospold

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  config.ini  pyproject.toml  setup.cfg
.github/workflows/: python-package-deploy.yml  python-test.yml
data/: 00001.xml  metaInformation.xml
data/examples/: 00001.xml  10001.xml
data/lxmlh/: sample.xml  sample.xml.invalid  sample_defaults.xml  schema.xsd
data/schema/: EcoInventCategories.xsd  EcoInventCompanyCodes.xsd  EcoInventRegionalCodes.xsd  EcoInventUnits.xsd  EcoSpold01DataTypes.xsd  EcoSpold01Dataset.xsd  EcoSpold01ElementaryDataset.xsd  EcoSpold01FlowData.xsd  EcoSpold01ImpactDataset.xsd  EcoSpold01MetaInformation.xsd  EcoSpold02ChildActivity.xsd  EcoSpold02ChildDataTypes.xsd  EcoSpold02ChildFlowData.xsd  EcoSpold02ChildMetaInformation.xsd  EcoSpold02DataTypes.xsd  EcoSpold02FlowData.xsd  EcoSpold02MetaInformation.xsd  XmlNamespace.xsd
data/tests/: v1_1_defaults.xml
data/v2/: v2_1.xml
docs/: conf.py  index.rst  modules.rst  pyecospold.rst  requirements.txt  schema_v1.rst  schema_v2.rst  schemas.rst
docs/_static/v1-schema/: EcoInventCategories.html  EcoInventCompanyCodes.html  EcoInventRegionalCodes.html  EcoInventUnits.html  EcoSpold01DataTypes.html  EcoSpold01Dataset.html  EcoSpold01ElementaryDataset.html  EcoSpold01FlowData.html  EcoSpold01ImpactDataset.html  EcoSpold01MetaInformation.html  XmlNamespace.html
docs/_static/v2-schema/: EcoSpold02.html  EcoSpold02Activity.html  EcoSpold02ChildActivity.html  EcoSpold02ChildDataTypes.html  EcoSpold02ChildFlowData.html  EcoSpold02ChildMetaInformation.html  EcoSpold02DataTypes.html  EcoSpold02FlowData.html  EcoSpold02MetaInformation.html  XmlNamespace.html
docs/v1-schema/: EcoInventCategories.html  EcoInventCompanyCodes.html  EcoInventRegionalCodes.html  EcoInventUnits.html  EcoSpold01DataTypes.html  EcoSpold01Dataset.html  EcoSpold01ElementaryDataset.html  EcoSpold01FlowData.html  EcoSpold01ImpactDataset.html  EcoSpold01MetaInformation.html  XmlNamespace.html
docs/v2-schema/: EcoSpold02.html  EcoSpold02Activity.html  EcoSpold02ChildActivity.html  EcoSpold02ChildDataTypes.html  EcoSpold02ChildFlowData.html  EcoSpold02ChildMetaInformation.html  EcoSpold02DataTypes.html  EcoSpold02FlowData.html  EcoSpold02MetaInformation.html  XmlNamespace.html
file_examples/ecospold-1-examples/: 00001.XML  00011.XML  00021.XML  00031.XML  00041.XML
file_examples/ecospold-2-examples/: 2ddc5ae3-e42a-40f0-9669-19291ce85cc0_f0994392-5748-4bf9-87e3-da2d5e356817.spold  ffed8e5b-8ecb-4a93-bc79-a1404afd9fcd_118a9202-6b68-44aa-82b5-2c2bf5bc02cf.spold  fff527b1-0fe4-491a-b16f-46500eca6d2f_dfaef357-a79e-4846-aabc-848b1ab59fbb.spold
pyecospold/: __init__.py  cas_validation.py  cli.py  config.py  core.py  helpers.py  model.py  model_v1.py  model_v2.py  utils.py  version.py
pyecospold/lxmlh/: __init__.py  config.py  helpers.py  parsers.py
pyecospold/schemas/: EcoInventCategories.xsd  EcoInventRegionalCodes.xsd  EcoSpold01DataTypes.xsd  EcoSpold01Dataset.xsd  EcoSpold01ElementaryDataset.xsd  EcoSpold01MetaInformation.xsd  EcoSpold02.xsd  EcoSpold02Activity.xsd  EcoSpold02ChildActivity.xsd  EcoSpold02ChildFlowData.xsd  EcoSpold02ChildMetaInformation.xsd
pyecospold/schemas/v1/: EcoInventCategories.xsd  EcoInventCompanyCodes.xsd  EcoInventRegionalCodes.xsd  EcoInventUnits.xsd  EcoSpold01DataTypes.xsd  EcoSpold01Dataset.xsd  EcoSpold01ElementaryDataset.xsd  EcoSpold01FlowData.xsd  EcoSpold01ImpactDataset.xsd  EcoSpold01MetaInformation.xsd  XmlNamespace.xsd
pyecospold/schemas/v2/: EcoSpold02.xsd  EcoSpold02Activity.xsd  EcoSpold02ChildActivity.xsd  EcoSpold02ChildDataTypes.xsd  EcoSpold02ChildFlowData.xsd  EcoSpold02ChildMetaInformation.xsd  EcoSpold02DataTypes.xsd  EcoSpold02FlowData.xsd  EcoSpold02MetaInformation.xsd  XmlNamespace.xsd
pyecospold/schemas/v2/child/: EcoSpold02ChildDataTypes.xsd
tests/: __init__.py  conftest.py  test_cas_validation.py  test_cli.py  test_config.py  test_core.py  test_helpers.py  test_lxmlh_helpers.py  test_model_v1.py  test_model_v2.py  test_parsers.py
tests/fixtures/templates/: v1-timeperiod.xml
tests/fixtures/v1/: v1_1_defaults.xml  v1_2.spold
tests/fixtures/v2/: v2_2.spold
